--- a/roles/hadoop/templates/bash.bashrc.j2
+++ b/roles/hadoop/templates/bash.bashrc.j2
@@ -78,7 +78,7 @@ export LD_LIBRARY_PATH=$LD_LIBRARY_PATH
 export PATH=$HBASE_HOME/bin/:$HADOOP_HOME/bin/:$JAVA_HOME/bin/:$PATH
 export HADOOP_CONF_DIR=${HADOOP_HOME}/etc/hadoop/
 export PATH=$HADOOP_HOME/bin/:$PATH
-export SPARK_HOME=/data/apps/{{spark_home}}/
+export SPARK_HOME={{spark_home}}/
 PATH=$PATH:$SPARK_HOME/bin
 export PYTHONPATH="${SPARK_HOME}/python:${PYTHONPATH}"
 unset HADOOP_USER_NAME
